# new_ViRheometry

./: .gitignore  PROJECT_STATUS.txt  README.md  build.sh  patch_out_dir.py  requirements.txt  run_pipeline.py  test_validate.py
Calibration/: MATH.md  README.md  extract_flow_distance.py  pipeline.py  prepare_configs.py  recalibrate_only.py  test_pipeline.py
DataPipeline/: ab_kernel_test.py  bo_collect.py  collect_data.py  collect_from_csv.py  diagnose_and_sample.py  dp_config.py  evaluate_experts.py  moe_utils.py  post_supplement.py  prepare_data.py  run_pipeline.py  select_k.py  soft_diagnose.py  supplement_v2.py  train_experts.py
FlowCurve/: flowcurve.py  hb_fit.py  param.py
FlowCurve/Rheo_Data/: Choco_20230113_2049_23C_no_shades.csv  Choco_20230113_2101_24C.csv  Choco_20230113_2114_25C.csv  Choco_20230113_2126_23C.csv  Chuno_20230114_1445_22C.csv  Chuno_20230114_1458_23C.csv  Chuno_20230114_1509_24C_no_shades.csv  Chuno_20230114_1523_25C.csv  Coleslaw_20230113_2140_22C.csv  Coleslaw_20230113_2152_23C.csv  Coleslaw_20230113_2205_24C.csv  Coleslaw_20230113_2216_25C.csv  Lotion_20230114_1152_22C.csv  (+20 more)
Optimization/: commandline  explog.txt  optimize_1setup.py  optimize_1setup_similarity.py  optimize_1setup_unified.py  optimize_2setups.py  optimize_2setups.py.bak  optimize_2setups_similarity.py  optimize_2setups_unified.py  optimize_3setups.py  propose_initial_setup.py  soft_interpolate.py  test_boundary_comparison.py  visualize_comparison.py
Simulation/: camera_params_default.xml  command_line  evaluation.py  main.py  main.py.bak  modeling.py  preprocessing.py  run_batch_sim.py  run_sim_only.py  test.py  tuning.py
Simulation/GLRender3d/: CMakeLists.txt  CMakeSourceFiles.txt  Camera.cpp  CompileDefinitions.h  FluidMat.cpp  FluidMat.h  ObjGL.cpp  ObjGL.h  main.cpp  main.h
Simulation/GLRender3d/cmake/: FindRapidXML.cmake  Findlibcmaes.cmake
docs/: incremental_retrain_v4.md  ridge_aware_bgm_spec.md  ridge_aware_bgm_spec_v1_archived.md
propose_initial_setup/: out_xml.sh  propose_initial_setup.py
surrogate/: __init__.py  config.py  expert_io.py  features.py  gating.py  models.py  predict.py  regime_filter.py  scalers.py
tests/: step_a_inverse_ab.py  step_a_rbcm_weight_ab.py
vi_mogp/: invert_rbcm.py  invert_rbcm_2setups.py  invert_rbcm_grad.py  model.py  predict.py
(+417 files in other folders)
